--- a/front-end/Android/app/src/main/res/layout/fragment_encyclopedia.xml
+++ b/front-end/Android/app/src/main/res/layout/fragment_encyclopedia.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="바텀 네비게이션 추천"
+        android:text="바텀 네비게이션 커스텀 백과사전"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
