--- a/front-end/Android/app/src/main/res/menu/menu_bottomnavigation.xml
+++ b/front-end/Android/app/src/main/res/menu/menu_bottomnavigation.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/mainItem"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="메인" />
+        android:id="@+id/myselfItem"
+        android:icon="@drawable/my_tab_icon_myself"
+        android:title="마이셀프" />
+    <item
+        android:id="@+id/encyclopediaItem"
+        android:icon="@drawable/my_tab_icon_encyclopedia"
+        android:enabled="true"
+        android:title="백과사전" />
+    <item
+        android:id="@+id/homeItem"
+        android:icon="@drawable/my_tab_icon_home"
+        android:title="홈" />
+
     <item
         android:id="@+id/searchItem"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/my_tab_icon_search"
         android:title="검색" />
-    <item
-        android:id="@+id/recommendItem"
-        android:icon="@android:drawable/ic_menu_call"
-        android:title="버튼3" />
 
     <item
-        android:id="@+id/configItem"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:title="환경설정" />
-
+        android:id="@+id/communityItem"
+        android:icon="@drawable/my_tab_icon_community"
+        android:title="커뮤니티" />
 </menu>
