feature: Sign Up Activity View 구현

--- a/front-end/Android/app/src/main/res/layout/activity_login.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".view.LoginActivity">
+    tools:context=".view.account.LoginActivity">
 
 
 <!--    <Button-->
@@ -87,7 +87,7 @@
             app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/login_tv_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
