--- a/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
@@ -57,8 +57,9 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/su_edt_email"
-        android:maxLines="1"
         android:inputType="text"
+        android:maxLines="1"
+        android:text="msno2@naver.com"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/su_tv_email"
@@ -83,8 +84,9 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/su_edt_nickname"
-        android:maxLines="1"
         android:inputType="text"
+        android:maxLines="1"
+        android:text="msno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +140,7 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:text="msnomsno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/su_tv_pass1" />
@@ -150,6 +153,7 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:text="msnomsno"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/su_tv_pass2" />
