--- a/front-end/Android/app/src/main/res/values/colors.xml
+++ b/front-end/Android/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="kinditMainColor1">#F73757</color>
+    <color name="kinditMainColor1">#DE2347</color>
     <color name="kinditMainColor2">#FCD685</color>
     <color name="kinditMainColor3">#FB9898</color>
     <color name="BottomNavigationView_bg_color">#FAFAFA</color>
     <color name="BottomNavigationView_icon_color">#212121</color>
 
+    <!-- Kindit's Color-->
 </resources>
