feature: Kindit 로그인 구현완료

--- a/front-end/Android/app/src/main/res/values/colors.xml
+++ b/front-end/Android/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="BottomNavigationView_icon_color">#212121</color>
 
     <!-- Kindit's Color-->
+    <color name="inputTextBoxColor">#F3F3F3</color>
 </resources>
