--- a/front-end/Android/app/src/main/res/layout/activity_kindit_login.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_kindit_login.xml
@@ -18,47 +18,47 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/kl_tv_find_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="이메일 찾기"
+        android:text="@string/kl_tv_find_email"
         android:textColor="@color/kinditMainColor1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
+        app:layout_constraintEnd_toStartOf="@+id/kl_tv_find_password"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/kl_tv_find_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호 찾기"
+        android:text="@string/kl_tv_find_password"
         android:textColor="@color/kinditMainColor1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        app:layout_constraintBottom_toBottomOf="@+id/kl_tv_find_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/kl_tv_find_email"
+        app:layout_constraintTop_toTopOf="@+id/kl_tv_find_email"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/kl_btn_login"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/login_button"
-        android:text="로그인"
+        android:text="@string/login_btn_login"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/kl_tv_find_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/kl_edt_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -66,13 +66,13 @@
         android:layout_marginBottom="50dp"
         android:backgroundTint="@color/kinditMainColor1"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="text"
         android:maxLines="1"
         android:shadowColor="@color/kinditMainColor1"
         android:textColorHighlight="@color/kinditMainColor1"
         android:textColorLink="@color/kinditMainColor1"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/kl_btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -81,14 +81,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="비밀번호"
+        android:text="@string/su_tv_pass1"
         android:textColor="@color/kinditMainColor1"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/kl_edt_password"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/kl_edt_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -96,7 +96,7 @@
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/kinditMainColor1"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="text"
         android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
@@ -108,10 +108,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="이메일"
+        android:text="@string/su_tv_email"
         android:textColor="@color/kinditMainColor1"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintBottom_toTopOf="@+id/kl_edt_email"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="32dp"
-        android:text="로그인"
+        android:text="@string/login_btn_login"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
