--- a/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
@@ -62,8 +62,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/kinditMainColor1"
             android:inputType="text"
-            android:maxLines="1"
-            android:text="msno2@naver.com"/>
+            android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -90,8 +89,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/kinditMainColor1"
             android:inputType="text"
-            android:maxLines="1"
-            android:text="msno2"/>
+            android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -111,15 +109,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/su_edtl_nickname"
         app:endIconMode="password_toggle">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/su_edt_pass1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/kinditMainColor1"
             android:inputType="textPassword"
-            android:maxLines="1"
-            android:text="msno2"
-        />
+            android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -147,8 +144,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/kinditMainColor1"
             android:inputType="textPassword"
-            android:maxLines="1"
-            android:text="msno2" />
+            android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
