--- a/front-end/Android/app/src/main/res/layout/fragment_main.xml
+++ b/front-end/Android/app/src/main/res/layout/fragment_main.xml
@@ -81,7 +81,7 @@
         app:srcCompat="@drawable/round_keyboard_arrow_right_black_36dp" />-->
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/kl_tv_find_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -99,7 +99,7 @@
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7">
+        app:layout_constraintTop_toBottomOf="@+id/kl_tv_find_password">
 
         <LinearLayout
             android:id="@+id/layout_bookmark"
