--- a/front-end/Android/app/src/main/res/values/styles.xml
+++ b/front-end/Android/app/src/main/res/values/styles.xml
@@ -7,4 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@android:color/white</item>                      <!-- 배경 -->
+        <item name="android:textColorPrimary">@color/kinditMainColor3</item>       <!-- 탭바 선택된 텍스트 -->
+        <item name="android:textColorSecondary">@android:color/black</item>     <!-- 탭바 텍스트 -->
+        <item name="colorAccent">@color/kinditMainColor3</item>                    <!-- 하단 움직이는 바 색-->
+        <item name="android:windowContentTransitions">true</item>
+    </style>
+
 </resources>
