--- a/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_sign_up.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/su_tv_sign_up" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/su_edtl_email"
+        android:id="@+id/fp_edtl_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -57,7 +57,7 @@
         tools:ignore="TextFields">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/su_edt_email"
+            android:id="@+id/fp_edt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/kinditMainColor1"
@@ -81,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/su_edtl_email">
+        app:layout_constraintTop_toBottomOf="@+id/fp_edtl_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/su_edt_nickname"
