--- a/front-end/Android/app/src/main/res/values/colors.xml
+++ b/front-end/Android/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
 
     <!-- Kindit's Color-->
     <color name="inputTextBoxColor">#F3F3F3</color>
+    <color name="DividerLineColor">#EDEDED</color>
 </resources>
